# wps2md

./: LICENSE  README.md  pyproject.toml
src/wps2md/: __init__.py  __main__.py  core.py
tests/: sample.doc  sample.wps  test_parse.py
