[project]
name = "wps2md"
version = "0.2.0"
description = "Parse legacy WPS Writer (.wps) and Word 97-2003 (.doc) OLE2 binary files into structured text and Markdown."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "listeng", email = "aosp@163.com" }]
keywords = ["wps", "office", "parser", "ole2", "word", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "olefile>=0.46",
]

[project.urls]
Homepage = "https://github.com/listeng/wps2md"
Issues = "https://github.com/listeng/wps2md/issues"

[project.scripts]
wps2md = "wps2md.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wps2md"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = [
    "pytest>=8",
]
